@@ -286,6 +286,23 @@ IW_EXPORT iwrc iwkv_close(IWKV *iwkvp);
 IW_EXPORT iwrc iwkv_put(IWDB db, const IWKV_val *key, const IWKV_val *val, iwkv_opflags opflags);
 
 /**
+ * @brief Intercepts old(replaced) value in put operation.
+ *
+ * @param key Key used in put operation
+ * @param val Value used in put operation
+ * @param oldval Old value which will be replaced by `val`
+ * @param op Arbitrary opaqued data passed to this handler
+ */
+typedef iwrc(*IWKV_PUT_HANDLER)(const IWKV_val *key, const IWKV_val *val, const IWKV_val *oldval, void *op);
+
+/**
+ * @brief Store record in database.
+ * @see iwkv_put()
+ */
+IW_EXPORT iwrc iwkv_puth(IWDB db, const IWKV_val *key, const IWKV_val *val,
+                         iwkv_opflags opflags, IWKV_PUT_HANDLER ph, void *phop);
+
+/**
  * @brief Get value for given `key`.
  *
  * @note If not matching record found `IWKV_ERROR_NOTFOUND` will be returned.
